package main;

public class Player {
	private String name;
	
	public Player(String name){
		this.name = name;
	}
	
	public String getName() {return name;}
	
	public void setName(String type) {this.name = name;}
	
}
